<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">福州实时公交</string>
    <string name="action_settings">Settings</string>
    <string name="loadingtext">loading...</string>
    <string name="titletext">福州实时公交</string>
    <string name="cyclebar">福州148路</string>
    <string name="allDerection">所有线路</string>
     <string name="setting">个性设置</string>
        <string name="allStation">选择站点</string>
    <string name="waitingStation">候车站点:</string>
       <string name="curLine">当前线路:</string>
    <string name="empty"></string>
    <string name="derectionTitle">行车方向 :</string>
    
      <string name="linenameprompt"> 在此输入线路名称 如（701）</string>
    
     <string name="interval">数据刷新加快(重启生效):</string>
	<string name="noticePre">提前2站提醒:</string>
    <!-- 版本更新信息 -->
    <string name="soft_update_title">软件更新</string>
    <string name="soft_update_info">更新上版本中的错误，流量优化</string>
    <string name="soft_update_updatebtn">省流量更新</string>
    <string name="soft_update_later">下次更新</string>
    <string name="soft_updating">应用更新中</string>
    <string name="soft_update_cancel">取消更新</string>
    <string name="soft_update_no">软件更新版本号</string>
    <string name="main_home">当前线路</string>
    <string name="main_news">所有线路</string>
    <string name="main_my_info">常用线路</string>
    <string name="menu_search">其他线路</string>
    <string name="more">设置</string>
 <string name="resour">本软件信息来源:http://appserver.wirelessfj.com.cn</string>
    
</resources>