<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:ads="http://schemas.android.com/apk/lib/com.google.ads"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/white"
    android:cacheColorHint="#00000000"
    tools:context=".SettingActivity" >

    <!-- title bar -->

    <LinearLayout
        android:id="@+id/titlebarlsetting_id"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/title_background"
        android:orientation="horizontal" >

        <ImageView
            android:id="@+id/titlebarsettinge_back_id"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="0.15"
            android:contentDescription="@string/empty"
            android:gravity="center"
            android:src="@drawable/detail_back_normal" >
        </ImageView>

        <TextView
            android:id="@+id/textviewxsetting"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="0.7"
            android:gravity="center"
            android:text="@string/setting"
            android:textColor="#3F454E"
            android:textSize="12pt" >
        </TextView>

        <TextView
            android:id="@+id/textxxxxxxxxxxx"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="0.15"
            android:gravity="center" />
    </LinearLayout>

     <LinearLayout
        android:id="@+id/noticeCheck"
        android:layout_width="fill_parent"
        android:layout_height="40dp"
        android:layout_below="@id/titlebarlsetting_id"
        android:orientation="horizontal" 
           android:background="@drawable/itemborder"
        android:clickable="true"
        >

        <TextView
            android:id="@+id/notice2Title"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="0.6"
            android:paddingLeft="5dp"
    		android:gravity="center_vertical"
            android:text="@string/noticePre"
            android:textColor="#000000" />
        <TextView
              android:gravity="center"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="0.1"
            android:paddingLeft="5dp"
            android:textColor="#000000" />
       <ImageView
                android:id="@+id/notice2TitleCheckBox"
	            android:layout_width="0dp"
    	        android:layout_height="wrap_content"
        	    android:layout_weight="0.2"
				android:layout_gravity="center"
                android:contentDescription="@string/empty"
                android:src="@drawable/checkbox_off" />
    </LinearLayout>
  <LinearLayout
        android:id="@+id/refreashInterval"
        android:layout_width="fill_parent"
        android:layout_height="40dp"
        android:layout_below="@id/noticeCheck"
        android:orientation="horizontal" 
            android:background="@drawable/itemborder"
        android:clickable="true"
        >

        <TextView
            android:id="@+id/refreashIntervalTitle"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="0.6"
            android:paddingLeft="5dp"
             android:gravity="center_vertical"
            android:text="@string/interval"
            android:textColor="#000000" />
        <TextView
              android:gravity="center"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="0.1"
            android:paddingLeft="5dp"
            android:textColor="#000000" />
       <ImageView
                android:id="@+id/refreashIntervalEdit"
	            android:layout_width="0dp"
    	        android:layout_height="wrap_content"
        	    android:layout_weight="0.2"
				android:layout_gravity="center"
                android:contentDescription="@string/empty"
                android:src="@drawable/checkbox_off" />
    </LinearLayout>
     <LinearLayout
        android:id="@+id/refreashInterval1"
        android:layout_width="fill_parent"
        android:layout_height="40dp"
        android:layout_below="@id/refreashInterval"
        android:orientation="horizontal" 
            android:background="@drawable/itemborder"
        android:clickable="true"
        >

      
        <TextView
              android:gravity="center"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="0.1"
            android:paddingLeft="5dp"
            android:textColor="#000000" 
            android:text="@string/resour"/>
 
    </LinearLayout>
</RelativeLayout>